# SlimePlus

./: .gitignore  README.md  README_zh.md  eval.py  pyproject.toml  rm.py  run.py  run.sh  unit_test.py  view.py
docs/: how_to_run_seperately.md  how_to_support_new_dataset.md
examples/: debug_output.jsonl  inference.sh  null_args.sh
examples/deepseek-v32/: run_8node.sh
examples/utils/: group_ray.sh  null_args.sh  test.jsonl
mika_eval/: __init__.py  task_manager.py
mika_eval/backend/: base.py  offline.py
mika_eval/llm_judge/: llm_judge.py
mika_eval/reward/: __init__.py  reward.py  score.py
mika_eval/reward/if_eval/: if_eval.py  instructions_util.py
mika_eval/tasks/: DAPO_Math_17k_Processed.py  __init__.py  aime2024.py  aime2025.py  amc2023.py  base.py  ceval.py  gpqa_diamond.py  hmmt2025.py  ifbench.py  ifeval.py  math500.py  minerva.py  mmlu_pro.py
mika_eval/utils/: dedup_strict.py  template.py  utils.py
open_gym/llm_judge/: llm_judge.py
open_gym/reward/: reward.py  score.py
open_gym/reward/code_gen/: score.py
open_gym/reward/code_gen/lcb_integration/: compute_code_generation_metrics.py  extraction_utils.py
open_gym/reward/if_eval/: if_eval.py
open_gym/reward/instruction_following/: score.py
open_gym/reward/structured_outputs/: score.py
open_gym/reward/workplace_assistant/: score.py  utils.py
open_gym/tasks/: __init__.py  base.py
open_gym/tasks/process_func/: DAPO_Math_17k_Processed.py  aime2024.py  aime2025.py  amc2023.py  ceval.py  gpqa_diamond.py  hmmt2025.py  ifbench.py  ifeval.py  math500.py  minerva.py  mmlu_pro.py
open_gym/utils/: utils.py
recipe/arena_hard/: run_ours.sh  run_qwen3.sh  test.sh
recipe/data_pipeline/4_instruct_llm_do_first/: run.sh  run_all.sh
recipe/data_pipeline/5_llm_judge_if_verifiable/: inference.py
recipe/data_pipeline/KlearReasoner/: load_klearreasoner.py
recipe/data_pipeline/llm_process_prompt/: postprocess.py  run.sh
recipe/data_pipeline/llm_relabel_data/: postprocess.py  preprocess.py  run.sh
recipe/data_pipeline/sft_data/: jsonl2parquet.py
recipe/evaluation/: eval.py  evaluate.py  inference.py  prepare_data.py  run.sh  run_ours.sh
recipe/llm_judge/: prepare_judge.py  run_example.sh  test_data_example.jsonl  test_system.sh
recipe/rm/: rm.py
scripts/debug/: debug.sh
scripts/slime_qwen_30b/: infer.sh
slime_plus/: data.py  infer.py
slimulation/: __init__.py
slimulation/backend/: __init__.py  online.py
slimulation/reward/math/: math_verify_reward.py
src/: config.py  data.py  task_manager.py  utils.py  vllm.py
src/backend/: offline.py
src/data/: data.py  extract.py  task.py  template.py
src/llm_judge/: extract.py  llm_judge.py
src/reward/: math_verify_reward.py  reward.py
src/reward/if_eval/: if_eval.py  instructions_util.py
src/reward/math/: math_verify_reward.py
src/tasks/: DAPO_Math_17k_Processed.py  __init__.py  base.py
src/utils/: __init__.py  utils.py
