[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open_gym"
version = "0.1.0"
description = "MikaEval: A flexible evaluation framework for LLMs"
readme = "README_zh.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Qingyu"}
]
keywords = ["llm", "evaluation", "inference", "sglang"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "sglang>=0.4.0",
    "transformers>=4.40.0",
    "tqdm>=4.66.0",
    "aiohttp>=3.9.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/qingyu/mika-eval"
Repository = "https://github.com/qingyu/mika-eval"

[project.scripts]
mika-eval = "open_gym.cli:main"

[tool.setuptools]
packages = ["open_gym", "open_gym.backend", "open_gym.reward", "open_gym.reward.math", "open_gym.reward.if_eval", "open_gym.reward.if_bench", "open_gym.tasks", "open_gym.server", "open_gym.llm_judge", "open_gym.utils"]

[tool.setuptools.package-data]
open_gym = ["py.typed"]
